added endofline in prettier rules

--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
       "react-hooks"
     ],
     "rules": {
-      "prettier/prettier": "error"
+      "prettier/prettier":  ["error",{
+        "endOfLine": "auto"}
+      ]
     }
   },
   "prettier": {
