Athithya: Fixed Dockerfile

--- a/package.json
+++ b/package.json
@@ -53,9 +53,13 @@
       "react-hooks"
     ],
     "rules": {
-      "prettier/prettier":  ["error",{
-        "endOfLine": "auto"}
-      ]
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ],
+      "no-console": "error"
     }
   },
   "prettier": {
